Fix for blocker bug 109893. Comment out line that adds the plugins folder to the XPT search paths, to avoid errors when trying to look in MRJPlugin.jar for .xpt files on Mac. r=jband/a=sleestack